:bug: Use mock MediaStream and prevent overscroll on iOS

--- a/illuclient/src/components/drawingboard.css
+++ b/illuclient/src/components/drawingboard.css
@@ -1,9 +1,29 @@
+html,
+body {
+  position: fixed;
+  overflow: hidden;
+}
+
+html {
+  overflow: hidden;
+  height: 100%;
+  overscroll-behavior: none;
+}
+
+body {
+  height: 100%;
+  overflow: hidden;
+  overscroll-behavior: none;
+}
+
 .container {
   position: relative;
 
   width: 100vw;
   height: 100vh;
   background: transparent;
+
+  overflow: hidden;
 }
 
 .container video {
@@ -22,5 +42,6 @@
   bottom: 0;
   z-index: 2;
 
+  overflow: hidden;
   background: transparent;
 }
